// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error - Eval error renders with expected text for an EvalError 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1022"
>
  EvalError: "EvalError message"
  

  <span
    className="objectBox-stackTrace-grid"
    key="stack"
  >
    <span
      className="objectBox-stackTrace-fn"
      key="fn0"
    />
    <span
      className="objectBox-stackTrace-location"
      key="location0"
    >
       (debugger eval code:10:13)
    </span>
  </span>
</span>
`;

exports[`Error - Internal error renders with expected text for an InternalError 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1023"
>
  InternalError: "InternalError message"
  

  <span
    className="objectBox-stackTrace-grid"
    key="stack"
  >
    <span
      className="objectBox-stackTrace-fn"
      key="fn0"
    />
    <span
      className="objectBox-stackTrace-location"
      key="location0"
    >
       (debugger eval code:11:13)
    </span>
  </span>
</span>
`;

exports[`Error - Multi line stack error renders with expected text for Error object 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1021"
>
  Error: "bar"
  

  <span
    className="objectBox-stackTrace-grid"
    key="stack"
  >
    <span
      className="objectBox-stackTrace-fn"
      key="fn0"
    >
      errorBar
    </span>
    <span
      className="objectBox-stackTrace-location"
      key="location0"
    >
       (debugger eval code:6:15)
    </span>
    <span
      className="objectBox-stackTrace-fn"
      key="fn1"
    >
      errorFoo
    </span>
    <span
      className="objectBox-stackTrace-location"
      key="location1"
    >
       (debugger eval code:3:3)
    </span>
    <span
      className="objectBox-stackTrace-fn"
      key="fn2"
    />
    <span
      className="objectBox-stackTrace-location"
      key="location2"
    >
       (debugger eval code:8:1)
    </span>
  </span>
</span>
`;

exports[`Error - Range error renders with expected text for RangeError 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1024"
>
  RangeError: "RangeError message"
  

  <span
    className="objectBox-stackTrace-grid"
    key="stack"
  >
    <span
      className="objectBox-stackTrace-fn"
      key="fn0"
    />
    <span
      className="objectBox-stackTrace-location"
      key="location0"
    >
       (debugger eval code:12:13)
    </span>
  </span>
</span>
`;

exports[`Error - Reference error renders with expected text for ReferenceError 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1025"
>
  ReferenceError: "ReferenceError message"
  

  <span
    className="objectBox-stackTrace-grid"
    key="stack"
  >
    <span
      className="objectBox-stackTrace-fn"
      key="fn0"
    />
    <span
      className="objectBox-stackTrace-location"
      key="location0"
    >
       (debugger eval code:13:13)
    </span>
  </span>
</span>
`;

exports[`Error - Simple error renders with expected text for simple error 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1020"
>
  Error: "Error message"
  

  <span
    className="objectBox-stackTrace-grid"
    key="stack"
  >
    <span
      className="objectBox-stackTrace-fn"
      key="fn0"
    />
    <span
      className="objectBox-stackTrace-location"
      key="location0"
    >
       (debugger eval code:1:13)
    </span>
  </span>
</span>
`;

exports[`Error - Syntax error renders with expected text for SyntaxError 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1026"
>
  SyntaxError: "SyntaxError message"
  

  <span
    className="objectBox-stackTrace-grid"
    key="stack"
  >
    <span
      className="objectBox-stackTrace-fn"
      key="fn0"
    />
    <span
      className="objectBox-stackTrace-location"
      key="location0"
    >
       (debugger eval code:14:13)
    </span>
  </span>
</span>
`;

exports[`Error - Type error renders with expected text for TypeError 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1027"
>
  TypeError: "TypeError message"
  

  <span
    className="objectBox-stackTrace-grid"
    key="stack"
  >
    <span
      className="objectBox-stackTrace-fn"
      key="fn0"
    />
    <span
      className="objectBox-stackTrace-location"
      key="location0"
    >
       (debugger eval code:15:13)
    </span>
  </span>
</span>
`;

exports[`Error - URI error renders with expected text for URIError 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1028"
>
  URIError: "URIError message"
  

  <span
    className="objectBox-stackTrace-grid"
    key="stack"
  >
    <span
      className="objectBox-stackTrace-fn"
      key="fn0"
    />
    <span
      className="objectBox-stackTrace-location"
      key="location0"
    >
       (debugger eval code:16:13)
    </span>
  </span>
</span>
`;

exports[`Error - base-loader.js renders as expected in tiny mode 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1020"
>
  Error
</span>
`;

exports[`Error - base-loader.js renders as expected without mode 1`] = `
<span
  className="objectBox-stackTrace"
  data-link-actor-id="server1.conn1.child1/obj1020"
>
  Error: "Error message"
  

  <span
    className="objectBox-stackTrace-grid"
    key="stack"
  >
    <span
      className="objectBox-stackTrace-fn"
      key="fn0"
    >
      onPacket
    </span>
    <span
      className="objectBox-stackTrace-location"
      key="location0"
    >
       (resource://devtools/shared/client/debugger-client.js:856:9)
    </span>
    <span
      className="objectBox-stackTrace-fn"
      key="fn1"
    >
      send/&lt;
    </span>
    <span
      className="objectBox-stackTrace-location"
      key="location1"
    >
       (resource://devtools/shared/transport/transport.js:569:13)
    </span>
    <span
      className="objectBox-stackTrace-fn"
      key="fn2"
    >
      exports.makeInfallible/&lt;
    </span>
    <span
      className="objectBox-stackTrace-location"
      key="location2"
    >
       (resource://devtools/shared/ThreadSafeDevToolsUtils.js:109:14)
    </span>
    <span
      className="objectBox-stackTrace-fn"
      key="fn3"
    >
      exports.makeInfallible/&lt;
    </span>
    <span
      className="objectBox-stackTrace-location"
      key="location3"
    >
       (resource://devtools/shared/ThreadSafeDevToolsUtils.js:109:14)
    </span>
  </span>
</span>
`;
